--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PontuaAeFront</title>
+  <title>PontuaAê!</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+     
+  <link href="//db.onlinewebfonts.com/c/7147aad6f91d29367144753601a8328b?family=Cocon" rel="stylesheet" type="text/css"/>
+     <link rel="stylesheet" href="assets/css/uikit.min.css">
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="assets/js/uikit.min.js"></script>
+  <script src="assets/js/uikit-icons.min.js"></script>
 </body>
 </html>
