--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="uk-section-muted">
 <head>
   <meta charset="utf-8">
-  <title>PontuaAê!</title>
+  <title>PontuaAê</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
   <link href="//db.onlinewebfonts.com/c/7147aad6f91d29367144753601a8328b?family=Cocon" rel="stylesheet" type="text/css"/>
      <link rel="stylesheet" href="assets/css/uikit.min.css">
 </head>
-<body>
+<body >
   <app-root></app-root>
 
   <script src="assets/js/uikit.min.js"></script>
