--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
      
   <link href="//db.onlinewebfonts.com/c/7147aad6f91d29367144753601a8328b?family=Cocon" rel="stylesheet" type="text/css"/>
      <link rel="stylesheet" href="assets/css/uikit.min.css">
+     <link rel="stylesheet" href="assets/css/toastr.css">
 </head>
 <body >
   <app-root></app-root>
