--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="uk-section-muted">
-<head>
-  <meta charset="utf-8">
-  <title>PontuaAê</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8" />
+    <title>PontuaAê</title>
+    <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-     
-  <link href="//db.onlinewebfonts.com/c/7147aad6f91d29367144753601a8328b?family=Cocon" rel="stylesheet" type="text/css"/>
-     <link rel="stylesheet" href="assets/css/uikit.min.css">
-     <link rel="stylesheet" href="assets/css/toastr.css">
-</head>
-<body >
-  <app-root></app-root>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-  <script src="assets/js/uikit.min.js"></script>
-  <script src="assets/js/uikit-icons.min.js"></script>
-</body>
+    <link
+      href="//db.onlinewebfonts.com/c/7147aad6f91d29367144753601a8328b?family=Cocon"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="assets/css/uikit.min.css" />
+    <link rel="stylesheet" href="assets/css/toastr.css" />
+  </head>
+  <body>
+    <app-root></app-root>
+    <script
+      src="//widget.cloudinary.com/global/all.js"
+      type="text/javascript"
+    ></script>
+    <script src="assets/js/uikit.min.js"></script>
+    <script src="assets/js/uikit-icons.min.js"></script>
+  </body>
 </html>
